about me changes

--- a/Quotum/index.html
+++ b/Quotum/index.html
@@ -13,46 +13,55 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
         <header>
             <nav class="content">
                 <ul>
                     <li class="first_of_kind"><a href="http://"></a><h1>About Me</h1></li>
-                    <li class=""><a href="http://"></a>Home</li>
-                    <li><a href="http://"></a>About</li>
-                    <li><a href="http://"></a>Contact</li>
-                    <li><a href="http://"></a>Gallery</li>
+                    <li class="nab_links"><a href="http://"></a>Home</li>
+                    <li class="nab_links"><a href="http://"></a>About</li>
+                    <li class="nab_links"><a href="http://"></a>Contact</li>
+                    <li class="nab_links"><a href="http://"></a>Gallery</li>
                 </ul>
             </nav>
         </header>   
         <main>
             <section class="content bars">
-                <img src="" alt="">
-                <h2>Hobbies</h2>
-                <p>what hobbies do i even have</p>
-                <ol>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ol>
+                <article>
+                    <h2>Hobbies</h2> 
+                    <img src="PNG2.png" alt="">
+                </article><br>
+                    <section>
+                        <h3>What hobbies do I even have?</h3>
+                    <ol>
+                        <li>Reading everything from science fiction novels to comics on Webtoons</li>
+                        <li>Writing short stories and designing video games</li>
+                        <li>Playing strategy games and RPGs</li>
+                        <li>Translating scientific research articles into digestible content</li>
+                        <li>Resolving conflicts of philosophical misunderstanding</li>
+                    </ol>
+                </section>
             </section>
-            <section class="content">
-                <img src="" alt="">
-                <h2>History</h2>
-                <p></p>
+            <section class="content bars">
+                <article>
+                    <h2>History</h2> 
+                    <img src="Travel-Globe-PNG-Free-Download.png" alt="">
+                
+                </article><br>
+                <article><h3>Where did I even come from?</h3>
+                <p style="margin-left: 10px; text-indent: 5%;">     Born and raised in Bronx, New York, Michael would eventually go through many years of public school education to graduate from the high school of computers and technology.
+                    After some years and many incremental experiences, he would attain a degree in the biological sciences and develop his analytical skills in the laboratory. With his degree in hand,
+                    Michael would go on to teach undergraduate courses during the pandemic. With his newfound completion of his formal education and over 20 years in the big city, he came to the conclusion
+                    that a change of location was necessary. This decision brought him down the east coast to Atlanta Georgia where he began living a life on his own for the very first time. 
+                </p></article>
             </section>
             <section class="content bars">
                 <img src="" alt="">
-                <h2>Gallery</h2>
+                <h2>Gallery</h2> <br>
                 <ul>
-                    <li class=""><a href="http://"></a><img src="" alt=""></li>
-                    <li><section><p></p><a href="http://"></a><img src="R.jpeg" alt=""></section></li>
-                    <li><section><p></p></section><a href="http://"></a><img src="OIP.jpeg" alt=""></li>
-                    <li><section><p></p></section><a href="http://"></a><img src="Land.jpg" alt=""></li>
+                    <li class="gallery"><section><p>pretty glass orb</p><a href="http://"></a><img src="Royalty-Free-Photograph.jpg" alt=""></li>
+                    <li class="gallery"><section><p>environmental landscape</p><a href="http://"></a><img src="istockphoto-962752268-612x612.jpg" alt=""></section></li>
+                    <li class="gallery"><section><p>aquatic life</p></section><a href="http://"></a><img src="R.jpeg" alt=""></li>
+                    <li class="gallery"><section><p>epic dragon</p></section><a href="http://"></a><img id="dragon" src="file.jpg" alt=""></li>
                 </ul>
                 <p></p>
             </section>
